[fix] corrected Java version required, included correct qanary ontology file, added script to run all required modulesin screens