@@ -19,4 +19,24 @@
     <module>qanary_component-AGDISTIS</module>
     <module>qanary_component-StanfordNERComponent</module>
   </modules>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.0</version>
+      <configuration>
+        <release>13</release>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target><compilerArgs>
+          --enable-preview
+        </compilerArgs>
+      </configuration>
+    </plugin>
+  </plugins>
+  </build>
 </project>
